# sxwz-subscriber

./: README.md
sxwz-subscriber-app/: bun.lockb  package.json  tsconfig.json
sxwz-subscriber-app/app/: app.css  root.tsx  routes.ts
sxwz-subscriber-app/app/components/: Layout.tsx  MainContainer.tsx
sxwz-subscriber-app/app/features/header/: index.ts
sxwz-subscriber-app/app/features/header/components/: app-header.tsx  smart-search.tsx
sxwz-subscriber-app/app/features/sidebar/: index.ts
sxwz-subscriber-app/app/features/sidebar/components/: app-sidebar.tsx  login-dialog.tsx  logout-dialog.tsx  nav-user.tsx  user.tsx
sxwz-subscriber-app/app/features/sidebar/hooks/: UserContext.tsx  use-user-context.tsx  use-user-store.tsx
sxwz-subscriber-app/app/features/sidebar/model/: login.ts  nav-items.ts  user-info.ts
sxwz-subscriber-app/app/features/subscriber/: index.ts
sxwz-subscriber-app/app/features/subscriber/components/: app-subscriber.tsx  sub-adder.tsx  sub-card.tsx  sub-tabs-content.tsx
sxwz-subscriber-app/app/features/subscriber/model/: sub-info.ts
sxwz-subscriber-app/app/hooks/: use-subs-store.tsx  use-user-store.tsx
sxwz-subscriber-app/app/lib/: utils.ts
sxwz-subscriber-app/app/routes/: dynamics.tsx  home.tsx
sxwz-subscriber-app/src-tauri/: Cargo.toml  tauri.conf.json
sxwz-subscriber-app/src-tauri/capabilities/: default.json
sxwz-subscriber-app/src-tauri/icons/: icon.icns
sxwz-subscriber-app/src-tauri/src/: lib.rs
sxwz-subscriber-app/src-tauri/src/bilibili_api/: login.rs  models.rs
