[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.5", features = [] }

[dependencies]
serde_json = "1.0.149"
serde = { version = "1.0.228", features = ["derive"] }
log = "0.4.29"
tauri = { version = "2.10.2", features = [] }
reqwest_cookie_store = "0.10.0"
cookie_store = "0.22.0"
tauri-plugin-log = "2.8.0"
tauri-plugin-shell = "2.3.5"
reqwest = { version = "0.13.2", features = ["json", "cookies"] }
tokio = { version = "1.49.0", features = ["full"] }
url = "2.5.8"
sp-keyring = "45.0.0"

[dev-dependencies]
mockito = "1.7.2"
