[package]
name = "四禧丸子订阅姬"
version = "0.1.0"
description = "四禧丸子订阅姬是一个基于Tauri框架开发的桌面应用程序，旨在帮助用户管理和订阅各种内容。它提供了一个用户友好的界面，允许用户轻松地添加、编辑和删除订阅"
authors = ["MSuperHero"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.5", features = [] }

[dependencies]
serde_json = "1.0.149"
serde = { version = "1.0.228", features = ["derive"] }
log = "0.4.29"
tauri = { version = "2.10.2", features = [] }
url = "2.5.8"
tauri-plugin-log = "2.8.0"
tauri-plugin-shell = "2.3.5"
tauri-plugin-store = "2.4.2"
tauri-plugin-http = { version = "2.5.7", features = ["unsafe-headers"] }
keyring = "3.6.3"
tauri-plugin-notification = "2"

[dev-dependencies]
mockito = "1.7.2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
